# neighborgoods-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEV_README.md  Dockerfile  README.md  Rocket.toml  Rocket.toml.docker  community_agreement.md  docker-compose.yml  start.cmd  start.sh  styleguide.md
.github/workflows/: kics-scan.yml  semgrep.yml
frontend/: Cargo.toml  index.html  schema.json
frontend/graphql/: query.graphql
frontend/src/: main.rs
graphql/: Cargo.toml
graphql/src/: main.rs
migrations/2025-03-31-000000_create_node_settings/: down.sql  up.sql
migrations/2025-04-01-152827_locations/: up.sql
migrations/2025-04-01-163138_users/: up.sql
migrations/2025-04-01-165528_items/: down.sql  up.sql
migrations/2025-04-02-224156_item_transfers/: down.sql  up.sql
migrations/2025-04-02-233547_certifications/: down.sql  up.sql
migrations/2025-04-02-234216_item_cert_requirements/: down.sql  up.sql
migrations/2025-04-03-000313_user_certifications/: down.sql  up.sql
migrations/2025-04-03-001430_peer_assessment/: down.sql  up.sql
migrations/2025-04-03-002726_cert_assessments/: down.sql  up.sql
migrations/2025-04-03-005335_add_approval_field_to_users/: down.sql  up.sql
migrations/2025-04-12-201724_add_confirm_fields_to_item_transfers/: down.sql  up.sql
migrations/2025-04-26-161155_item_tags/: down.sql  up.sql
migrations/2025-06-04-232000_add_return_to_transfer_purpose/: down.sql  up.sql
migrations/2025-06-05-005431_create_notifications/: up.sql
src/: db.rs  main.rs  schema.rs
src/models/: cert_assessment.rs  certification.rs  init.rs  item.rs  item_cert_requirement.rs  item_tag.rs  (+9 more)
templates/: dashboard.html.hbs  inventory.html.hbs  item_contribution.html.hbs  item_transfers.html.hbs  item_view.html.hbs  landing.html.hbs  login.html.hbs  profile.html.hbs  signup.html.hbs  user_agreement.html.hbs
(+20 files in other folders)
