[package]
name = "neighborgoods-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2", features = ["postgres", "chrono", "numeric", "uuid"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["secrets", "json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4"] }
rust-argon2 = { version = "2.1.0", features = ["serde"] }
rand = { version = "0.9.0", features = ["serde"] }
anyhow = "1.0.97"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]


# export PATH="/opt/homebrew/opt/libpq/bin:$PATH" && export LIBRARY_PATH=$LIBRARY_PATH:/opt/homebrew/opt/libpq/lib
